tests/NormalTests/paczka1/fuzzy1/14927752.err
Error in line 2: tjDTYJcQ2 A725 38,52
Error in line 1: tjDTYJcQ2 A725 65,5
Error in line 3: tjDTYJcQ2 S400 30,1
Error in line 6: wz8 A725 10,1
Error in line 5: jJrbhvy A955 74,7
Error in line 13: e9cfZpjOKVt A725 98,4
Error in line 18: jJrbhvy S400 24,78
Error in line 12: jJrbhvy A725 36,0
Error in line 15: e9cfZpjOKVt S742 9,2
Error in line 19: jJrbhvy S400 54,3
Error in line 23: jJrbhvy A725 2,4
